fixed: all table gapping issues fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,6 @@
 .saaspricing-table-description {
     font-size: 16px;
     color: var(--saaspricing-boulder);
-    padding-bottom: 40px;
 }
 
 .saaspricing-price-table-head small {
@@ -47,9 +46,9 @@
     font-weight: 400;
 }
 
-.saaspricing-table .saaspricing-table-title-des {
+.saaspricing-table .saaspricing-table-title-description {
     vertical-align: middle;
-    padding-bottom: 30px;
+    padding: 30px;
 }
 
 .saaspricing-table-main, .saaspricing-feature-list {
@@ -148,7 +147,6 @@
     font-weight: 600;
     color: var(--saaspricing-mako);
     margin: 0;
-    padding-bottom: 10px;
     line-height: normal;
 }
 
@@ -166,12 +164,11 @@
     font-weight: 600;
     color: var(--saaspricing-mako);
     margin-bottom: 0;
-    padding-bottom: 10px;
     line-height: normal;
 }
 
 .saaspricing-cards-all .saaspricing-vertical-description,
-.saaspricing-horizontal .saaspricing-horizontal-des {
+.saaspricing-horizontal .saaspricing-horizontal-description {
     font-size: 16px;
     font-weight: 400;
     color: var(--saaspricing-boulder);
@@ -317,7 +314,7 @@
 }
 
 .saaspricing-horizontal-title, 
-.saaspricing-horizontal-des,
+.saaspricing-horizontal-description,
 .saaspricing-horizontal-feature-title {
     word-wrap: break-word;
 }
@@ -436,18 +433,15 @@
     font-weight: 600;
     font-size: 22px;
     margin: 0;
+    padding: 0 0 20px 0;
 }
 
-.saaspricing-horizontal-feature-list .row {
-    padding: 20px 0;
-}
-
-.saaspricing-horizontal-des {
+.saaspricing-horizontal-description {
     padding-bottom: 24;
 }
 
 .saaspricing-horizontal-feature-list {
-    padding:0 48px 0 48px;
+    padding:0 48px 20px 48px;
 }
 
 .saaspricing-horizontal .saaspricing-horizontal-slogan-title {
@@ -463,7 +457,6 @@
 
 .saaspricing-vertical-feature .saaspricing-features-title {
     font-weight: 600;
-    margin-bottom: 16px;
     color: var(--saaspricing-mako);
     font-size: 22px;
 }
@@ -521,6 +514,7 @@
 
 .saaspricng-horizontal-secondary-main {
     width: 100%;
+    margin-top: 10px; 
 }
 
 .saaspricing-horizontal .saaspricng-horizontal-secondary-main .saaspricing-horizontal-secondary {
@@ -528,7 +522,6 @@
     color: var(--saaspricing-white);
     font-weight: 600;
     text-decoration: underline;
-    margin-top: 10px; 
 }
 
 .saaspricing-horizontal-pricing-left {
